<resources>
    <string name="app_name">Tagoid</string>
    <string name="favoriActivity_name">Favoris</string>
    <string name="action_settings_activerNotification">Activer le suivi</string>
    <string name="action_settings_desactiverNotification">Désactiver le suivi</string>
    <string name="action_settings_favs">Mes favoris</string>
    <string name="action_settings_addAsFavs">Ajouter en favori</string>
    <string name="label_radioBtn_Bus">Bus</string>
    <string name="label_radioBtn_Tram">Tram</string>
    <string name="label_favoris_1">Pour supprimer un favori, glissez vers la gauche.</string>
    <string name="label_accueil_1">Sélectionner le moyen de transport préféré</string>
    <string name="label_accueil_2">Sélectionner une ligne</string>
    <string name="label_accueil_3">Sélectionner un arrêt</string>
    <string name="label_accueil_4">Dir. </string>
    <string name="label_accueil_5">Dir. </string>
    <string name="label_btnSettings_1">Désactiver notification</string>
    <string name="label_btnSettings_2">Ajouter aux favoris</string>
    <string name="label_btnSettings_3">Enlever des favoris</string>
</resources>
