<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vanbossm.tagoid.MainActivity">
    <item
        android:id="@+id/action_settings_addAsFav"
        android:title="@string/action_settings_addAsFavs"
        android:icon="@drawable/ic_star_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings_notification"
        android:title="@string/action_settings_activerNotification"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings_favs"
        android:title="@string/action_settings_favs"
        app:showAsAction="never" />
</menu>
